# DicomForge

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  branding.md  compatibility.md  conformance.md  roadmap.md  safety.md
examples/: async_networking.py  deidentify_with_report.py  pixel_safety.py  pydicom_io.py
src/dicomforge/: __init__.py  adapt.py  anonymize.py  api.py  charset.py  codecs.py  dataset.py  dicomweb.py  errors.py  io.py  network.py  pixels.py  tags.py  transfer_syntax.py  transport.py  uids.py
tests/: test_adapt.py  test_anonymize.py  test_api.py  test_charset.py  test_core.py  test_dicomweb.py  test_io.py  test_network.py  test_pixels.py  test_transport.py
