[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dicomforge"
version = "0.4.0"
description = "A lightweight, typed Python DICOM processing toolkit for medical imaging."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "DICOMForge contributors" }]
keywords = ["dicom", "medical-imaging", "pacs", "radiology", "healthcare"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.optional-dependencies]
pydicom = ["pydicom>=2.4"]
pixels = ["numpy>=1.23", "pillow>=10"]
dev = ["pydicom>=2.4", "pytest>=7", "ruff>=0.4", "mypy>=1.8"]
all = ["pydicom>=2.4", "numpy>=1.23", "pillow>=10"]

[project.urls]
Homepage = "https://github.com/dicomforge/dicomforge"
Repository = "https://github.com/dicomforge/dicomforge"
Documentation = "https://github.com/dicomforge/dicomforge/tree/main/docs"
Issues = "https://github.com/dicomforge/dicomforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dicomforge"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["dicomforge"]
